--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 22-10-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 04-11-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
                 <h2 class="text-center mb-4 text-light text-opacity-75">Important Links</h2>
@@ -158,6 +158,18 @@
                                         <div class="card-body">
                                             <h5 class="card-title"> Node.js </h5>
                                             <a href="https://nodejs.org/en" class="btn btn-light"
+                                                target="_blank" rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-democrat card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: #000000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title"> Deno.js </h5>
+                                            <a href="https://deno.com/" class="btn btn-light"
                                                 target="_blank" rel="noopener noreferrer">Visit</a>
                                         </div>
                                     </div>
