Add improved introduction version of message on index.js file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/header.ejs')%>
 
-<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 23-09-2024 -->
+<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 18-11-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
         <div class="jumbotron text-center bg-gradient-light">
@@ -14,13 +14,14 @@
             <div class="star-wars-container text-info">
                 <div class="crawl">
                     <div class="title">
-                        <p>I’m Juan Arevalo, a Technical Product Manager turned AI Enthusiast.</p>
-                        <h1>Blending 15+ Years of Expertise in Abrasion Solutions and now with AI-Powered Innovation</h1>
+                        <p>Hello, I'm Juan Arevalo—a Metallurgical Engineer Enhancing GET Solutions with AI Insights.</p>
+                        <h1>Over 15 Years in Wear Analysis, Now Integrating AI to Elevate Problem-Solving and Customer Collaboration</h1>
                     </div>
-                    <p>with a rich history in abrasion solutions and an evolving passion for software engineering and artificial intelligence. With over 15 years of experience in enhancing the durability and efficiency of ground-engaging tools, my journey has now embraced the transformative power of AI. </p>
-                    <p>My goal is to pioneer AI-driven abrasion wear technologies that redefine predictive maintenance and design optimization. 'Innovation is seeing what everybody has seen and thinking what nobody has thought.' This belief motivates me to merge traditional engineering with cutting-edge AI, aiming to lead projects that set new standards in the industry.</p>
+                    <p>As a seasoned wear specialist in open-pit mining, I've dedicated my career to improving the performance and durability of ground-engaging tools. Having recently completed my AI studies, I'm eager to incorporate artificial intelligence as a tool to enhance my problem-solving abilities and work more efficiently with customers.</p>
+                    <p>My goal is to utilize AI to optimize maintenance strategies, extend equipment life, and deliver effective solutions in collaboration with clients. By blending proven engineering practices with cutting-edge technology, I aim to provide exceptional value and set new standards in the mining industry.</p>
                 </div>
             </div>
+                     
         </div>
         <div class="container">
             <div class="row">
