Add new introduction in about.ejs

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
 <%-include('partials/main_nav.ejs')%>
 
-<!-- Filename: about.ejs | Author: Juan Arevalo | Date: 19-09-2024 -->
+<!-- Filename: about.ejs | Author: Juan Arevalo | Date: 11-18-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
         <div class="jumbotron bg-gradient-light text-center">
@@ -38,19 +38,19 @@
                     </div>
                     <div class="card-body text-light bg-primary">
                         <p class="roboto mb-3">
-                            Emerging from a rich heritage of software development and metallurgical engineering, I am a passionate multilingual professional with a zeal for technology and its intersection with real-world problems. My expertise spans from wear abrasion problem analysis to the vibrant realms of Artificial Intelligence. This unique blend empowers me to craft solutions that are both innovative and grounded.
+                            With a career grounded in metallurgical engineering and a recent leap into Artificial Intelligence, I bring a unique perspective to technical problem-solving. From analyzing wear abrasion to applying AI tools, I’m passionate about crafting innovative solutions that address real-world needs effectively and efficiently.
                         </p>
                         <p class="roboto mb-3">
-                            My bilingual background in English and Spanish allows me to bridge cultures, fostering collaboration in diverse teams. My journey has ranged from metallurgical engineering at Trujillo National University to the dynamic world of AI at Centennial College, Toronto.
+                            My bilingual fluency in English and Spanish allows me to connect with clients and teams across borders, ensuring seamless collaboration and communication. Having studied at Trujillo National University and Centennial College, I’ve built a foundation that blends technical expertise with a forward-thinking approach.
                         </p>
                         <p class="roboto mb-3">
-                            With a heart set on continuous learning and an eye for detail, I am always on the lookout for the next challenge, the next problem to solve.
+                            I’m driven by a commitment to excellence and customer success, always ready to embrace the next challenge and deliver solutions that exceed expectations.
                         </p>
                         <div class="text-center mt-4">
                             <a href="../assets/archives/Resume_Juan_Arevalo_2024.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-outline-light">View Resume (PDF)</a>
-
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
