Add new page about GET projects

--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -1,4 +1,4 @@
-<!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 16-09-2024 -->
+<!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 18-11-2024 -->
 <footer class="foot d-flex align-items-center text-secondary w-100">
     <nav class="navbar bg-black w-100">
         <div class="container-fluid">
@@ -14,7 +14,8 @@
 
                 <div class="col-md-4 col-12 text-md-between text-center">
                     <ul class="list-unstyled">
-                        <li><a href="/projects" class="text-secondary text-decoration-none">Projects</a></li>
+                        <li><a href="/get" class="text-secondary text-decoration-none">GET Projects</a></li>
+                        <li><a href="/projects" class="text-secondary text-decoration-none">Tech Projects</a></li>
                         <li><a href="/link" class="text-secondary text-decoration-none">Links</a></li>
                     </ul>
                 </div>        
