--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,4 +1,4 @@
-<!-- Filename: main_nav.ejs | Author: Juan Arevalo | Date: 16-09-2024 -->
+<!-- Filename: main_nav.ejs | Author: Juan Arevalo | Date: 18-11-2024 -->
 
 <nav class="navbar navbar-expand-lg navbar-dark vh100 bg-primary">
     <div class="container-fluid">
@@ -22,8 +22,12 @@
                     <a class="nav-link" href="/contact"><i class="fa-regular fa-address-book"></i> Contact </a>
                 </li>
 
+                <li class="nav-item  <%= title === 'Contact' ? 'active' : '' %>">
+                    <a class="nav-link" href="/get"><i class="fa-regular fa-address-book"></i> GET Projects </a>
+                </li>
+
                 <li class="nav-item  <%= title === 'Project' ? 'active' : '' %>">
-                    <a class="nav-link" href="/projects"><i class="fa-solid fa-list-check"></i> Project </a>
+                    <a class="nav-link" href="/projects"><i class="fa-solid fa-list-check"></i> Tech Projects </a>
                 </li>
 
                 <!-- <li class="nav-item  <%= title === 'Services' ? 'active' : '' %>">
