Add new project on 2011 projects

--- a/views/get.ejs
+++ b/views/get.ejs
@@ -25,7 +25,7 @@
                 <h2 class="accordion-header" id="heading2011">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapse2011" aria-expanded="false" aria-controls="collapse2011">
-                        <h5>2011 Projects</h5>
+                        <h5>2011 Projects as GET Technical Sales</h5>
                     </button>
                 </h2>
                 <div id="collapse2011" class="accordion-collapse collapse" aria-labelledby="heading2011"
@@ -54,7 +54,7 @@
                         </div>
 
                         <hr class="my-4">
-                        
+
                         <!-- Project 2 --> 
                         <div class="timeline-item mb-4">
                             <h6><strong>Reducing Downtime in Cable Shovels through Six Sigma Collaboration</strong></h6>
@@ -110,7 +110,7 @@
                 <h2 class="accordion-header" id="heading2010">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapse2010" aria-expanded="false" aria-controls="collapse2010">
-                        <h5>2010 Projects</h5>
+                        <h5>2010 Projects as GET Inspector</h5>
                     </button>
                 </h2>
                 <div id="collapse2010" class="accordion-collapse collapse" aria-labelledby="heading2010"
@@ -172,7 +172,7 @@
                 <h2 class="accordion-header" id="heading2009">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapse2009" aria-expanded="false" aria-controls="collapse2009">
-                        <h5>2009 Projects</h5>
+                        <h5>2009 Projects as GET Inspector</h5>
                     </button>
                 </h2>
                 <div id="collapse2009" class="accordion-collapse collapse" aria-labelledby="heading2009"
@@ -212,7 +212,7 @@
                 <h2 class="accordion-header" id="heading2008">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapse2008" aria-expanded="false" aria-controls="collapse2008">
-                        <h5>2008 Projects</h5>
+                        <h5>2008 Projects as GET Inspector</h5>
                     </button>
                 </h2>
                 <div id="collapse2008" class="accordion-collapse collapse" aria-labelledby="heading2008"
@@ -249,7 +249,7 @@
                 <h2 class="accordion-header" id="heading2007">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapse2007" aria-expanded="false" aria-controls="collapse2007">
-                        <h5>2007 Projects</h5>
+                        <h5>2007 Projects as GET Inspector</h5>
                     </button>
                 </h2>
                 <div id="collapse2007" class="accordion-collapse collapse" aria-labelledby="heading2007"
