Add new GET project - 2012

--- a/views/get.ejs
+++ b/views/get.ejs
@@ -20,6 +20,40 @@
         <!-- Year Projects Accordion -->
         <div class="accordion accordion-flush" id="yearProjectsAccordion">
 
+            <!-- 2012 Projects -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading2012">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse2012" aria-expanded="false" aria-controls="collapse2012">
+                        <h5>2012 Projects as TSG</h5>
+                    </button>
+                </h2>
+                <div id="collapse2012" class="accordion-collapse collapse" aria-labelledby="heading2012"
+                    data-bs-parent="#yearProjectsAccordion">
+                    <div class="accordion-body text-light text-opacity-75">
+
+                        <!-- Project 1-->
+                        <div class="timeline-item mb-4">
+                            <h6><strong>Installing Wing Base on Cable Shovel Following Manufacturer's Welding Procedures</strong></h6>
+                            <p><strong>Situation:</strong> A requirement emerged to install a new wing base on a high-capacity cable shovel to enhance its operational efficiency. Adherence to the manufacturer's specific welding procedures was crucial to ensure safety and meet performance standards.</p>
+                            <p><strong>Task:</strong> Perform the installation of the wing base according to the manufacturer's welding procedures, aligning with customer expectations regarding quality and completion time.</p>
+                            <p><strong>Action:</strong></p>
+                            <ul>
+                                <li>Obtained the manufacturer's welding procedure documentation from the global technical support and engineering teams.</li>
+                                <li>Developed a detailed work plan with the supervisor, ensuring it complied with the welding procedures and met the customer's time expectations.</li>
+                                <li>Conducted training sessions for the supervisor and welding crew on the specific welding procedures to be followed.</li>
+                            </ul>
+                            <p><strong>Results:</strong></p>
+                            <ul>
+                                <li>Successfully completed the wing base installation in accordance with the manufacturer's welding procedures and the customer's expectations.</li>
+                                <li>Achieved a proper fit of the wing shrouds upon installation, enhancing the shovel's performance.</li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
             <!-- 2011 Projects -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="heading2011">
