Add new project 2013 to GET projects page

--- a/views/get.ejs
+++ b/views/get.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs') %>
 <%- include('partials/main_nav.ejs') %>
-<!-- Filename: get.ejs | Author: Juan Arevalo | Date: 19-10-2024 -->
+<!-- Filename: get.ejs | Author: Juan Arevalo | Date: 19-11-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
 
@@ -19,6 +19,44 @@
 
         <!-- Year Projects Accordion -->
         <div class="accordion accordion-flush" id="yearProjectsAccordion">
+
+            <!-- 2013 Projects -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading2013">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse2013" aria-expanded="false" aria-controls="collapse2013">
+                        <h5>2013 Projects as TSG</h5>
+                    </button>
+                </h2>
+                <div id="collapse2013" class="accordion-collapse collapse" aria-labelledby="heading2013"
+                    data-bs-parent="#yearProjectsAccordion">
+                    <div class="accordion-body text-light text-opacity-75">
+
+                        <!-- Project 1 -->
+                        <div class="timeline-item mb-4">
+                            <h6><strong>Resolving Installation Issues with Updated Shrouds on Cable Shovels</strong></h6>
+                            <p><strong>Situation:</strong> The installation of updated shrouds on high-capacity cable shovels was challenging due to poor fitting, causing the shrouds to fall off shortly after installation, even when practically new. These issues led to increased downtime for the cable shovels, negatively affecting productivity.</p>
+                            <p><strong>Task:</strong> Find a quick solution to help the customer achieve the expected performance from the new updated shrouds.</p>
+                            <p><strong>Action:</strong></p>
+                            <ul>
+                                <li>Visited the mine to observe symptoms and identify the underlying problem.</li>
+                                <li>Analyzed the boneyard and conducted fractographic examinations of the broken shrouds.</li>
+                                <li>Consulted with the engineering team to determine any design differences between the new updated shrouds and the previous version.</li>
+                                <li>Created an internal bi-dimensional gauge based on drawings provided by the engineering team.</li>
+                                <li>Measured the internal opening of the shrouds using the gauge.</li>
+                                <li>Modified the lip according to the gauge measurements and adjusted the position of the boss to meet the new specifications.</li>
+                            </ul>
+                            <p><strong>Results:</strong></p>
+                            <ul>
+                                <li>Discovered that the internal opening of the new shrouds was approximately 3 mm narrower than the previous version.</li>
+                                <li>Successfully modified the lip and adjusted the boss position to accommodate the updated shrouds.</li>
+                                <li>After fixing all 16 base positions, no further incidents of shroud breakage occurred.</li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
 
             <!-- 2012 Projects -->
             <div class="accordion-item">
