--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<!-- Filename: header.ejs | Author: Juan Arevalo | Date: 26-09-2024 -->
+<!-- Filename: header.ejs | Author: Juan Arevalo | Date: 20-11-2024 -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keyboards" content="Jbaruz, Juan Bibiano Arevalo Ruiz, Juan Arevalo Ruiz, Juan Arevalo, Jbaruz Github, Jbaruz-AI, Artificial Intelligence,
     AI, Deep Learning, Machine Learning, Web, web, developer, app, Github, projects, GET, Ground Engaging Tools, TSG, Wear specialist, Peru, SSLA, Centennial,
-    Centennial College, Escocorp, Esco, Open pit mining, welding, Metallurgy Engineer, Canada, soporte tecnico GET">
+    Centennial College, Escocorp, Esco, Open pit mining, welding, Metallurgy Engineer, Canada, soporte tecnico GET, Innovations and Solutions in Ground Engaging Tools">
     <meta name="title" content="Juan Arevalo: AI Developer & Mining Tools Specialist in Toronto">
     <meta name="Author" content="Juan Arevalo - Jbaruz">
     <meta name="description" content="Juan Arevalo, an AI developer in Toronto studying at Centennial College with hands-on experience in abrasion tools for the industry's largest mining loader machines.">
