Improve title of index.ejs focus on GET

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <%-include('partials/header.ejs')%>
 
-<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 18-11-2024 -->
+<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 20-11-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
         <div class="jumbotron text-center bg-gradient-light">
-            <h1 class="display-4 text-light text-opacity-75">Embarking on an AI Odyssey!</h1>
-            <h2 class="subtitle text-secondary">Blending Traditional Engineering with Cutting-Edge AI Innovation</h2>
+            <h1 class="display-4 text-light text-opacity-75">Revolutionizing GET Solutions with AI</h1>
+            <h2 class="subtitle text-secondary">Blending Ground Engaging Tool Expertise with AI to Elevate Customer Experience</h2>            
 
             <!-- Add this line where you want to display the last updated date -->
             <p id="lastUpdated" style="color: darkslategray;">Today's date:  </p>
